--- a/caricascarica.tex
+++ b/caricascarica.tex
@@ -22,12 +22,27 @@
     }
 
 
-\title{Limiti matematici applicati ai circuiti RC}
+\title{Studio dei circuiti RC}
 \author{Giacomo Fortunato}
 
 \begin{document}
-
 \maketitle
+\section{Presentazione}
+Mi chiamo \textbf{Giacomo Fortunato} e frequento (ancora per poco) la quinta classe, sezione F, al Liceo Scientifico Statale \say{G. Battaglini}. Questo è il mio elaborato di \textbf{Matematica e Fisica} preparato per la simulazione del colloquio d'esame (a.s. 2019/2020, anche noto come anno del COVID). \\ In questa breve relazione percorreremo le strade matematiche di integrali e limiti per studiare il funzionamento dei circuiti RC (a corrente continua), in particolare il comportamento del \textbf{condensatore}. \\ Questo documento è stato creato utilizzando un linguaggio di markup per la preparazione di testi chiamato \LaTeX\footnote{https://www.latex-project.org/}: questo linguaggio è utilizzato continuamente nella produzione di documenti, tesi, relazioni e pubblicazioni di ogni genere, particolarmente di carattere scientifico. Personalmente, scrivo e compilo (trasformare da file codice a file finale) \LaTeX con Atom\footnote{https://atom.io/}, l'IDE sviluppato da GitHub\footnote{https://github.com/}. Ho appreso di \LaTeX dai miei compagni più grandi delle Olimpiadi di Matematica, e sono fiero di aver imparato così tanto successivamente da solo. \\ Spero che l'elaborato possa essere di Vostro gradimento, buona lettura.
+\chapter{Introduzione}
 
-\part{Introduzione}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \end{document}
