Grafici della carica

--- a/caricascarica.tex
+++ b/caricascarica.tex
@@ -133,8 +133,14 @@ Prima dell'istante $t=0$, il circuito è aperto, esattamente come in figura \ref
 \item Applichiamo la sostituzione (1.6) inversa e ordiniamo l'equazione finale: \begin{equation}\begin{split}\varepsilon C-Q(t)=\varepsilon Ce^{-\frac{t}{RC}} \\ Q(t)=\varepsilon C \left(1-e^{-\frac{t}{RT}}\right)\end{split}\end{equation}
 \end{enumerate} Siamo arrivati a una conclusione molto interessante: per facilitare la comprensione, colorerò tutti gli elementi caratterizzanti che dipendono dal circuito e lascerò in nero solo gli elementi fissi e la variabile $t$, che è la variabile della funzione che stiamo studiando: $$\textcolor{blue}{Q}(t)=\textcolor{orange}{\varepsilon}\textcolor{Green}{C}\left(1-e^{-\frac{t}{\textcolor{Purple}{R}\textcolor{Green}{C}}}\right)$$
 \subsection{Studio della carica del condensatore}
-Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Proviamo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità***, possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale: $$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]} \cdot \frac{[\xout{Q}]}{[\xout{V}]}=[t] $$ Questo elemento si chiama \textbf{costante di tempo} (o tempo caratteristico) del circuito RC e si indica con $\tau$.
-
+Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Proviamo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità***, possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale:
+$$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]} \cdot \frac{[\xout{Q}]}{[\xout{V}]}=[t]$$ Questo elemento si chiama \textbf{costante di tempo} (o tempo caratteristico) del circuito RC e si indica con $\tau$. Se $t=\tau$, come si comporta la carica del condensatore? $Q(\tau)=0,632\,\varepsilon C$, o, per essere ancora più precisi, $Q(t)=\left(1-e^{-1}\right) \varepsilon C$. Grazie alla potenza dei calcolatori e dei programmi di \emph{plotting}, siamo capaci di visualizzare con facilità estrema i grafici di tutte le funzioni: ecco come nel grafico della figura \ref{fig:carica} possiamo confermare il dato matematico del limite, con un asintoto orizzontale $y=\varepsilon C$.
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=10cm]{Carica}
+    \caption{Grafico della carica di un condensatore}
+    \label{fig:carica}
+\end{figure}
 
 
 
