--- a/caricascarica.tex
+++ b/caricascarica.tex
@@ -36,7 +36,7 @@
 \section{Presentazione}
 Mi chiamo \textbf{Giacomo Fortunato} e frequento (ancora per poco) la quinta classe, sezione F, al Liceo Scientifico Statale \say{G. Battaglini}. Questo è il mio elaborato di \textbf{Matematica e Fisica} preparato per la simulazione del colloquio d'esame (a.s. 2019/2020, anche noto come anno del COVID). \\ In questa breve relazione percorreremo le strade matematiche di integrali e limiti per studiare il funzionamento dei circuiti RC (a corrente continua), in particolare il comportamento del \textbf{condensatore}. \\ Spero che l'elaborato possa essere di Vostro gradimento, buona lettura.
 \section{Strumenti utilizzati}
-Questo documento è stato creato utilizzando un linguaggio di markup per la preparazione di testi chiamato \LaTeX\footnote{https://www.latex-project.org}: questo linguaggio è utilizzato continuamente nella produzione di documenti, tesi, relazioni e pubblicazioni di ogni genere, particolarmente di carattere scientifico. Personalmente, scrivo e compilo (trasformare da file codice a file finale) \LaTeX con Atom\footnote{https://atom.io}, l'IDE sviluppato da GitHub\footnote{https://github.com}. (Più tecnicamente, utilizzo \textbf{TeX Live 2019} o \textbf{TeX Live 2020}\footnote{https://tug.org/texlive} e, su Atom, utilizzo il pacchetto \textbf{atom-latex} di @thomasjo\footnote{https://github.com/thomasjo/atom-latex}, e il pacchetto \mbox{\textbf{latex-language2e}} di @Aerijo\footnote{https://github.com/Aerijo/language-latex2e}.) \\ Ho appreso di \LaTeX dai miei compagni più grandi delle Olimpiadi di Matematica, e sono fiero di aver imparato così tanto successivamente da solo. \\ Per i diagrammi, ho utilizzato diagrams.net\footnote{https://www.diagrams.net}, un programma javascipt e web-based per la realizzazione di diagrammi. Il software è open-source\footnote{https://github.com/jgraph/drawio} rilasciato sotto Licenza Apache 2.0\footnote{https://github.com/jgraph/drawio/blob/master/LICENSE}.
+Questo documento è stato creato utilizzando un linguaggio di markup per la preparazione di testi chiamato \LaTeX\footnote{https://www.latex-project.org}: questo linguaggio è utilizzato continuamente nella produzione di documenti, tesi, relazioni e pubblicazioni di ogni genere, particolarmente di carattere scientifico. Personalmente, scrivo e compilo (trasformare da file codice a file finale) \LaTeX con Atom\footnote{https://atom.io}, l'IDE sviluppato da GitHub\footnote{https://github.com}. (Più tecnicamente, utilizzo \textbf{TeX Live 2019} o \textbf{TeX Live 2020}\footnote{https://tug.org/texlive} e, su Atom, utilizzo il pacchetto \textbf{atom-latex} di @thomasjo\footnote{https://github.com/thomasjo/atom-latex}, e il pacchetto \mbox{\textbf{latex-language2e}} di @Aerijo\footnote{https://github.com/Aerijo/language-latex2e}.) \\ Ho appreso di \LaTeX dai miei compagni più grandi delle Olimpiadi di Matematica, e sono fiero di aver imparato così tanto successivamente da solo. \\ Per i diagrammi, ho utilizzato diagrams.net\footnote{https://www.diagrams.net}, un programma javascipt e web-based per la realizzazione di diagrammi. Il software è open-source\footnote{https://github.com/jgraph/drawio} rilasciato sotto Licenza Apache 2.0\footnote{https://github.com/jgraph/drawio/blob/master/LICENSE}. \\ Per i grafici ho utilizzato GeoGebra Classic 6\footnote{https://www.geogebra.org}, un applicazione usata a livello globale, particolarmente nel campo dell'educazione, per la sua funzione di calcolatore grafico e per la sua semplicità di utilizzo.
 \chapter{Dimostrazione iniziale}
 \section{Introduzione e premesse}
 \begin{figure}[htp]
@@ -54,7 +54,7 @@ Un percorso chiuso che viene percorso da una carica, e questa ritorna al suo pun
 Una batteria è un dispositivo capace di produrre una differenza di potenziale elettrico ($\Delta V$) ai suoi estremi.
 \end{definition}
 \begin{definition}{\textbf{Forza elettromotrice indotta, \emph{fem} ($\varepsilon$)}}
-La forza elettromotrice indotta è la differenza di potenziale elettrico quando la batteria non genera corrente. Si indica con $\varepsilon$ e si misura in Volt [V].
+La forza elettromotrice indotta è la differenza di potenziale elettrico quando la batteria non genera corrente. Si indica con $\varepsilon$ e si misura in Volt (V).
 \end{definition}
 \begin{figure}[htp]
     \centering
@@ -73,7 +73,7 @@ La costante di proporzionalità diretta tra la differenza di potenziale $V$ l'in
     \label{fig:resistenza}
 \end{figure}
 \begin{definition}{\textbf{Capacità di un condensatore}}
-Un condensatore è un dispositivo dotato di due facce piane chiamate armature capaci di accumulare carica elettrica: su una faccia accumula una carica positiva $+q$, sull'altra una carica negativa $-q$ (in verde nelle figure \ref{fig:condensatore}, \ref{fig:condensatore-z} e \ref{fig:condensatore-3d}). \\ La carica di un condensatore $Q$ è direttamente proporzionale alla differenza di potenziale $V$, e questo rapporto è la caratteristica del condensatore, la sua capacità. $$C=\frac{Q}{V}$$ La capacità di un condensatore si misura in Farad (F) (che sarebbe Coulomb su Volt).
+Un condensatore è un dispositivo dotato di due facce piane, chiamate armature, capaci di accumulare carica elettrica: su una faccia accumula una carica positiva $+q$, sull'altra una carica negativa $-q$ (in verde nelle figure \ref{fig:condensatore}, \ref{fig:condensatore-z} e \ref{fig:condensatore-3d}). \\ La carica di un condensatore $Q$ è direttamente proporzionale alla differenza di potenziale $V$, e questo rapporto è la capacità del condensatore: la capacità è la caratteristica del condensatore. $$C=\frac{Q}{V}$$ La capacità di un condensatore si misura in Farad (F) (Coulomb su Volt).
 \end{definition}
 \begin{figure}[htp]
     \centering
@@ -94,7 +94,7 @@ Un condensatore è un dispositivo dotato di due facce piane chiamate armature ca
     \label{fig:condensatore-3d}
 \end{figure}
 \begin{definition}{\textbf{Legge dei nodi di Kirchhoff}}
-Presupposto che un nodo è un punto del circuito in cui si incontrano 3 o più fili, la somma algebrica di tutte le correnti che convergono in un nodo di un circuito deve essere uguale a 0. Se la corrente esce dal nodo l'intesità sarà di segno negativo, se la corrente entra nel nodo l'intenistà sarà di segno positivo. $$\text{In nodo:}\sum{I_n}=0$$ Nella figura \ref{fig:nodo}, $|I_1+I_2|=|I_3|$, ma in particolare: $$I_1+I_2=-I_3\longrightarrow I_1+I_2+I_3=0$$
+Presupposto che un nodo è un punto del circuito in cui si incontrano 3 o più fili, la somma algebrica di tutte le correnti che convergono in un nodo di un circuito deve essere uguale a 0. Se la corrente esce dal nodo l'intesità sarà di segno negativo, se la corrente entra nel nodo l'intenistà sarà di segno positivo. $$\text{In nodo:}\sum{I_n}=0$$ Nella figura \ref{fig:nodo}, $|I_1+I_2|=|I_3|$, ed in particolare: $$I_1+I_2=-I_3\longrightarrow I_1+I_2+I_3=0$$
 \end{definition}
 \begin{figure}[htp]
     \centering
@@ -119,32 +119,48 @@ Presupposto che una maglia è un qualsiasi segmento di circuito chiuso (compreso
     \label{fig:RC-chiuso}
 \end{figure}
 
-Nella figura \ref{fig:RC-aperto}, ho mostrato subito un circuito RC aperto, cioé un cicuito dove sono inseriti una batteria, una resistenza e un condensatore in serie. \\ Se in un circuito con solo batteria e condensatore, viene chiuso un interrutore (in blu nella figura \ref{fig:RC-aperto}), le armature dei condensatori si caricano quasi istantaneamente. In un circuito RC invece la resistenza limita la velocità di propagazione delle cariche e può passare un certo tempo prima che i condensatori comincino davvero a caricarsi. Questo fenomeno è il concetto chiave di questo elaborato.
-\subsection{Carica del condensatore nel circuito RC}
+Ho esposto fin dall'inizio, nella figura \ref{fig:RC-aperto}, un circuito RC aperto, cioé un cicuito dove sono inseriti una batteria, una resistenza e un condensatore in serie. \\ Se in un circuito con solo batteria e condensatore, viene chiuso un interrutore (in blu nella figura \ref{fig:RC-aperto}), le armature dei condensatori si caricano quasi istantaneamente. In un circuito RC, invece, la resistenza limita la velocità di propagazione delle cariche e può passare un certo tempo prima che i condensatori comincino davvero a caricarsi. Questo fenomeno è il concetto chiave di questo elaborato.
+\section{Carica del condensatore nel circuito RC}
 Prima dell'istante $t=0$, il circuito è aperto, esattamente come in figura \ref{fig:RC-aperto}. Esattamente nell'istante $t=0$, il circuito viene chiuso (figura \ref{fig:RC-chiuso}), e viene permesso alla corrente di attraversare il circuito: è da questo istante che inizia l'esperienza. \\ Consideriamo $V(t)$ la differenza di potenziale $V$ del condensatore in funzione del tempo $t$, e consideriamo $Q(t)$ la carica $Q$ del condensatore in funzione del tempo $t$. Per cui: $$t=0\longrightarrow V(t)=0 \wedge Q(t)=0$$ Procediamo \emph{step by step}:
 \begin{enumerate}
 \item Per la definizione di intensità di corrente elettrica $I$, questa stessa sarà: \begin{equation}\textcolor{blue}{I}=\lim_{t\mapsto 0}\frac{\Delta Q(t)}{\Delta t}=\textcolor{blue}{\frac{dQ}{dt}}\end{equation}
 \item Studiamo la capacità $C$ del nostro condensatore: \begin{equation}C=\frac{Q(t)}{V(t)}\longleftrightarrow \textcolor{Green}{V(t)=\frac{Q(t)}{C}}\end{equation}
-\item Ora \emph{incolliamo questi elementi in un collage} grazie alla \textbf{legge di Ohm} e la \textbf{legge delle maglie di Kirchhoff}: \begin{equation}\varepsilon-V(t)=V,V=IR,\varepsilon-\textcolor{Green}{V(t)}=\textcolor{blue}{I}R***\end{equation} \begin{equation}\varepsilon-\textcolor{Green}{\frac{Q(t)}{C}}=R\textcolor{blue}{\frac{dQ}{dt}}\end{equation}
+\item Ora \emph{incolliamo questi elementi in un collage} grazie alla \textbf{legge di Ohm} e la \textbf{legge delle maglie di Kirchhoff}:
+\begin{equation}\left\{
+\begin{matrix}
+\varepsilon-V(t)=V\\
+V=IR\\
+\varepsilon-\textcolor{Green}{V(t)}=\textcolor{blue}{I}R
+\end{matrix}
+\right.\end{equation} \begin{equation}\varepsilon-\textcolor{Green}{\frac{Q(t)}{C}}=R\textcolor{blue}{\frac{dQ}{dt}}\end{equation}
 \item Riarrangiamo l'equazione: \begin{equation}dt=\frac{RC\,dQ}{\varepsilon C-Q}\end{equation}
 \item In questo momento è neccesario risolvere l'eqauzione differenziale che abbiamo ottenuto. È neccesaria una mossa molto scaltra, una sostituzione di variabile efficace, che influenzi positivamente non solo la variabile stessa ma anche il differenziale di questa: \begin{equation}x=\varepsilon C-Q\;\;\;\;\;dQ=-dx\end{equation} Questa sostituzione è fondamentale per non modificare l'equazione in alcun modo, mascherandola però in un'equazione differenziale che sappiamo risolvere.***
 \item Sostituiamo e integriamo entrambi i membri dell'equazione: \begin{equation}dt=\frac{RC}{x}dx\longrightarrow \int_0^tdt=-RC\int_0^t\frac{dx}{x}\longrightarrow t=-RC\ln{\left(\frac{x(t)}{x(0)}\right)}\end{equation}
 \item Risolviamo rispetto a $x(t)$: \begin{equation}x(t)=-x(0)e^{-\frac{t}{RC}}\end{equation}
 \item Applichiamo la sostituzione (1.6) inversa e ordiniamo l'equazione finale: \begin{equation}\begin{split}\varepsilon C-Q(t)=\varepsilon Ce^{-\frac{t}{RC}} \\ Q(t)=\varepsilon C \left(1-e^{-\frac{t}{RT}}\right)\end{split}\end{equation}
 \end{enumerate} Siamo arrivati a una conclusione molto interessante: per facilitare la comprensione, colorerò tutti gli elementi caratterizzanti che dipendono dal circuito e lascerò in nero solo gli elementi fissi e la variabile $t$, che è la variabile della funzione che stiamo studiando: $$\textcolor{blue}{Q}(t)=\textcolor{orange}{\varepsilon}\textcolor{Green}{C}\left(1-e^{-\frac{t}{\textcolor{Purple}{R}\textcolor{Green}{C}}}\right)$$
-\subsection{Studio della carica del condensatore}
-Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Proviamo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità***, possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale:
-$$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]} \cdot \frac{[\xout{Q}]}{[\xout{V}]}=[t]$$ Questo elemento si chiama \textbf{costante di tempo} (o tempo caratteristico) del circuito RC e si indica con $\tau$. Se $t=\tau$, come si comporta la carica del condensatore? $Q(\tau)=0,632\,\varepsilon C$, o, per essere ancora più precisi, $Q(t)=\left(1-e^{-1}\right) \varepsilon C$. Grazie alla potenza dei calcolatori e dei programmi di \emph{plotting}, siamo capaci di visualizzare con facilità estrema i grafici di tutte le funzioni: ecco come nel grafico della figura \ref{fig:carica} possiamo confermare il dato matematico del limite, con un asintoto orizzontale $y=\varepsilon C$.
+\section{Studio della carica del condensatore}
+Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Vericfichiamolo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità***, possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire in fisica? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale:
+$$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]} \cdot \frac{[\xout{Q}]}{[\xout{V}]}=[t]$$ Questo elemento si chiama \textbf{costante di tempo} (o tempo caratteristico) del circuito RC e si indica con $\tau$. Se $t=\tau$, come si comporta la carica del condensatore? $Q(\tau)=0,632\,\varepsilon C$, o, per essere ancora più precisi, $Q(t)=\left(1-e^{-1}\right) \varepsilon C$. Grazie alla potenza dei calcolatori e dei programmi di \emph{plotting}, siamo capaci di visualizzare con facilità estrema i grafici di tutte le funzioni: ecco come nel grafico della figura \ref{fig:carica} possiamo confermare il dato matematico del limite, con l'asintoto orizzontale $y=\varepsilon C$. \\ Ritengo opportuno inoltre considerare alcune osservazioni, derivanti sia dalla forma algebrica, sia dal grafico: \begin{enumerate}
+\item L'andamento della funzione è caratterizzato dalla componente $(1-e^{-\frac{t}{RC}})$, poiché $\varepsilon C$ è solo un fattore moltiplicativo, per cui può modificare solo il limite della funzione(per $x\mapsto +\infty$), ma non modifica la struttura della funzione. È $(1-e^{-\frac{t}{RC}})$ il vero protagonista della funzione, che gli fornisce l'andamento del grafico in fig. \ref{fig:carica}.
+\item Al tempo $\tau$, la carica del condensatore è al $63,2\%$, mentre a $4\tau$ è al $98,1\%$: questo andamento ci suggerrisce che la \say{crescita} della carica non è costante. Per questo motivo introduciamo una nuova riflessione...
+\item La derivata della nostra funzione è: \begin{multline*}D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{RC-0}{RC^2})\longrightarrow D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{1}{RC})\longrightarrow\\\longrightarrow D[Q(t)]=\varepsilon \xout{C}\frac{1}{R\xout{C}} e^{-\frac{t}{RC}}\longrightarrow D[Q(t)]=\frac{\varepsilon}{R} e^{-\frac{t}{RC}}\end{multline*} Questo risultato è molto interessante, perché non rappresenta solo la derivata della funzione. Poiché per definizione (eq. 1.1) l'intensità di corrente è il differenziale della carica su tempo (e il la funzione che stiamo derivando è proprio carica in funzione del tempo), allora ...
+\item La derivata della carica del condensatore corrisponde (anzi, è) l'\textbf{intensità di corrente elettrica del condensatore}. $$I(t)=\frac{\varepsilon}{R} e^{-\frac{t}{RC}}$$ Se studiamo quindi questa funzione possiamo capire quanto velocemente si carica, e analogamente capire quanta corrente scorre (perché, di fatto, è la stessa cosa). Il grafico della figura \ref{fig:corrente} ci permette di studiare dal grafico elementi algebrici della funzione: lo studio del grafico è tanto efficace quanto lo studio algebrico. Possiamo dedurre dal grafico anche i suoi limiti: per $x\mapsto 0$ il limite è $\frac{\varepsilon}{R}$, mentre per $x\mapsto +\infty$ la funzione si limita a 0. La carica di un condensatore quindi si carica molto velocemente all'inizio, ma con il passare del tempo, l'intensità di corrente sarà quasi pari a 0. Per concretizzare il concetto, al famoso tempo $4\tau$, la carica $Q(t)$ è al $98,1\%$ della carica massima $\varepsilon C$, e la sua intensità di corrente $I(t)$ è all'$1,8\%$ dell'intensità massima $\frac{\varepsilon}{R}$.
+\end{enumerate}
 \begin{figure}[htp]
     \centering
     \includegraphics[width=10cm]{Carica}
     \caption{Grafico della carica di un condensatore}
     \label{fig:carica}
 \end{figure}
-
-
-
-
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=10cm]{Corrente}
+    \caption{Grafico dell'intensità di corrente elettrica in un condensatore}
+    \label{fig:corrente}
+\end{figure}
+\section{Conclusione}
+Non posso che non essere sempre entusiasta di lavorare con tanta scienza: la continuità con cui due ambiti scientifici, come la matematica e la fisica si incrociano tra di loro è così naturale e fluido che non posso non pensare che sia un miracolo. La capacità che ha l'uomo di scoprire, inventare, immaginare e sognare è unica tra tutti gli esseri viventi. Un banale circuito RC è stato capace di alimentare il desiderio di studio e di scoperta, fino alle conclusioni della fisica odierna, e grazie agli strumenti della matematica scoperta fino ad ora. \\ E finché sarà viva la curiosità nell'uomo, non dobbiamo temere di perderci.
 
 
 
