--- a/caricascarica.tex
+++ b/caricascarica.tex
@@ -161,9 +161,5 @@ $$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]}
 \end{figure}
 \section{Conclusione}
 Non posso che non essere sempre entusiasta di lavorare con tanta scienza: la continuità con cui due ambiti scientifici, come la matematica e la fisica si incrociano tra di loro è così naturale e fluido che non posso non pensare che sia un miracolo. La capacità che ha l'uomo di scoprire, inventare, immaginare e sognare è unica tra tutti gli esseri viventi. Un banale circuito RC è stato capace di alimentare il desiderio di studio e di scoperta, fino alle conclusioni della fisica odierna, e grazie agli strumenti della matematica scoperta fino ad ora. \\ E finché sarà viva la curiosità nell'uomo, non dobbiamo temere di perderci.
-
-
-
-
-
+\par Il mio documento sarà pubblico, sia il codice sorgente (file .tex e i file grafici), sia il file di output finale (.pdf), presso la mia repository \emph{caricascarica}: \mbox{https://github.com/LuckyJack482/caricascarica}
 \end{document}
