--- a/caricascarica.tex
+++ b/caricascarica.tex
@@ -28,8 +28,8 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Definizione}
 
-\title{Studio dei circuiti RC}
-\author{Giacomo Fortunato}
+\title{Continuità e circuiti RC}
+\author{Giacomo Fortunato VF}
 
 \begin{document}
 \maketitle
@@ -111,6 +111,14 @@ Presupposto che una maglia è un qualsiasi segmento di circuito chiuso (compreso
     \caption{Grafico dell'andamento del potenziale in un circuito DC}
     \label{fig:maglia}
 \end{figure} \clearpage
+\section{Continuità di una funzione}\label{sec:continuità}
+Nella matematica, il primo strumento per studiare una funzione è il limite. Il limite è un operatore versatile, poiché ci permette di studiare in più punti la funzione: possiamo trovare il limite quando $x$ tende a un valore reale interno al dominio, quindi un qualsiasi numero; quando $x$ tende a $\pm\infty$, il limite ci consente di conoscere nuove informazioni sui \say{bordi} del grafico, senza l'ausilio di calcolatori o altri strumenti esterni. \\ La definizione di limite ci fornisce il primo, ma assolutamente inefficente, metodo di calcolo. La vera svolta è nella continuità di una funzione: vediamo perché.
+\begin{definition}{\textbf{Funzione continua}} Una funzione $f$, definita in un intorno di $x_0$, si dice continua in $x_0$ se $$\lim_{x\mapsto x_0}f(x)=f(x_0)$$ Inoltre una funzione $f$ è continua in un intervallo $I$ se essa è continua in tutti i punti di $I$.\end{definition} Per comodità, possiamo cambiare nella definizione il punto di accumulazione, rendendolo zero. È sufficiente porre $x=x_0+h$: di conseguenza si ha che $h=x-x_0$, quindi $x\mapsto x_0\Longleftrightarrow h\mapsto 0$. Per cui: $$\lim_{h\mapsto 0}f(x_0+h)=f(x_0)$$ In particolare, se la condizione è verificata per un intervallo $I$, allora la funzione è continua in $I$. \par
+Si può dimostrare con facilità che tutte le funzioni elementari sono continue nel loro dominio. Tuttavia, per i nostri scopi sarà utilizzata la continuità delle funzioni esponenziali: per questo motivo mi sembra corretto dimostrare che \textbf{ogni funzione esponenziale è continua in $\mathbb{R}$}. \\ Per qualsiasi $x_0\in \mathbb{R}\wedge a>0,a\neq1$ abbiamo $$\lim_{x\mapsto x_0}a^x=a^{x_0}$$ Posto $\varepsilon > 0$ molto piccolo, dobbiamo risolvere la disequazione $$|a^x-a^{x_0}<\varepsilon|\longrightarrow a^{x_0}-\varepsilon<a^x<a^{x_0}+\varepsilon$$ Giunti a questo risultato, è necessario distinguere due casi, se $a>1$ o se $0<a<1$: consideriamo il caso $a>1$, poiché vedremo alla fine che la stessa dimostrazione si può appliccare anche per il caso $0<a<1$. Prendiamo i logaritmi in base $a$, ricordando che la funzione logaritmica è crescente in base $a>1$, e proseguiamo $$a^{x_0}-\varepsilon<a^x<a^{x_0}+\varepsilon\longrightarrow \log_a{\left(a^{x_0}-\varepsilon\right)}<x<\log_a{\left(a^{x_0}+\varepsilon\right)}$$ L'ultimo \emph{step} è osservare che, essendo $a^{x_0}-\varepsilon<a^{x_0}$, $log_a{\left(a^{x_0}-\varepsilon\right)}<\log_a{a^{x_0}}\rightarrow \log_a{\left(a^{x_0}-\varepsilon\right)}<x_0$. Analogamente $\log_a{\left(a^{x_0}+\varepsilon\right)}>x_0$ e l'insieme delle soluzioni definisce un intorno completo di $x_0$. Per terminare, si può dimostrare analogamente il caso $0<a<1$. \par
+Missione compiuta: abbiamo dimostrato la continuità della funzione esponenziale. Questo è fondamentale per i circuiti RC, poiché le funzioni che troveremo e che dovremo successivamente studiare sono funzioni (composte di) funzioni esponenziali, in particolar modo l'esponenziale più \textbf{bello} che esista, $e^x$.
+
+
+
 \section{Circuiti RC}
 \begin{figure}[htp]
     \centering
@@ -123,7 +131,7 @@ Ho esposto fin dall'inizio, nella figura \ref{fig:RC-aperto}, un circuito RC ape
 \section{Carica del condensatore nel circuito RC}
 Prima dell'istante $t=0$, il circuito è aperto, esattamente come in figura \ref{fig:RC-aperto}. Esattamente nell'istante $t=0$, il circuito viene chiuso (figura \ref{fig:RC-chiuso}), e viene permesso alla corrente di attraversare il circuito: è da questo istante che inizia l'esperienza. \\ Consideriamo $V(t)$ la differenza di potenziale $V$ del condensatore in funzione del tempo $t$, e consideriamo $Q(t)$ la carica $Q$ del condensatore in funzione del tempo $t$. Per cui: $$t=0\longrightarrow V(t)=0 \wedge Q(t)=0$$ Procediamo \emph{step by step}:
 \begin{enumerate}
-\item Per la definizione di intensità di corrente elettrica $I$, questa stessa sarà: \begin{equation}\textcolor{blue}{I}=\lim_{t\mapsto 0}\frac{\Delta Q(t)}{\Delta t}=\textcolor{blue}{\frac{dQ}{dt}}\end{equation}
+\item Per la definizione di intensità di corrente elettrica $I$, questa stessa sarà: \begin{equation}\textcolor{blue}{I}=\lim_{t\mapsto 0}\frac{\Delta Q(t)}{\Delta t}=\textcolor{blue}{\frac{dQ}{dt}}\end{equation}\label{eq:intensità}
 \item Studiamo la capacità $C$ del nostro condensatore: \begin{equation}C=\frac{Q(t)}{V(t)}\longleftrightarrow \textcolor{Green}{V(t)=\frac{Q(t)}{C}}\end{equation}
 \item Ora \emph{incolliamo questi elementi in un collage} grazie alla \textbf{legge di Ohm} e la \textbf{legge delle maglie di Kirchhoff}:
 \begin{equation}\left\{
@@ -134,17 +142,17 @@ V=IR\\
 \end{matrix}
 \right.\end{equation} \begin{equation}\varepsilon-\textcolor{Green}{\frac{Q(t)}{C}}=R\textcolor{blue}{\frac{dQ}{dt}}\end{equation}
 \item Riarrangiamo l'equazione: \begin{equation}dt=\frac{RC\,dQ}{\varepsilon C-Q}\end{equation}
-\item In questo momento è neccesario risolvere l'eqauzione differenziale che abbiamo ottenuto. È neccesaria una mossa molto scaltra, una sostituzione di variabile efficace, che influenzi positivamente non solo la variabile stessa ma anche il differenziale di questa: \begin{equation}x=\varepsilon C-Q\;\;\;\;\;dQ=-dx\end{equation} Questa sostituzione è fondamentale per non modificare l'equazione in alcun modo, mascherandola però in un'equazione differenziale che sappiamo risolvere.***
+\item In questo momento è neccesario risolvere l'eqauzione differenziale che abbiamo ottenuto. È neccesaria una mossa molto scaltra, una sostituzione di variabile efficace, che influenzi positivamente non solo la variabile stessa ma anche il differenziale di questa: \begin{equation}x=\varepsilon C-Q\;\;\;\;\;dQ=-dx\end{equation}\label{eq:sostituzione} Questa sostituzione è fondamentale per non modificare l'equazione in alcun modo, mascherandola però in un'equazione differenziale che sappiamo risolvere.***
 \item Sostituiamo e integriamo entrambi i membri dell'equazione: \begin{equation}dt=\frac{RC}{x}dx\longrightarrow \int_0^tdt=-RC\int_0^t\frac{dx}{x}\longrightarrow t=-RC\ln{\left(\frac{x(t)}{x(0)}\right)}\end{equation}
 \item Risolviamo rispetto a $x(t)$: \begin{equation}x(t)=-x(0)e^{-\frac{t}{RC}}\end{equation}
-\item Applichiamo la sostituzione (1.6) inversa e ordiniamo l'equazione finale: \begin{equation}\begin{split}\varepsilon C-Q(t)=\varepsilon Ce^{-\frac{t}{RC}} \\ Q(t)=\varepsilon C \left(1-e^{-\frac{t}{RT}}\right)\end{split}\end{equation}
+\item Applichiamo la sostituzione (eq. \ref{eq:sostituzione}) inversa e ordiniamo l'equazione finale: \begin{equation}\begin{split}\varepsilon C-Q(t)=\varepsilon Ce^{-\frac{t}{RC}} \\ Q(t)=\varepsilon C \left(1-e^{-\frac{t}{RT}}\right)\end{split}\end{equation}
 \end{enumerate} Siamo arrivati a una conclusione molto interessante: per facilitare la comprensione, colorerò tutti gli elementi caratterizzanti che dipendono dal circuito e lascerò in nero solo gli elementi fissi e la variabile $t$, che è la variabile della funzione che stiamo studiando: $$\textcolor{blue}{Q}(t)=\textcolor{orange}{\varepsilon}\textcolor{Green}{C}\left(1-e^{-\frac{t}{\textcolor{Purple}{R}\textcolor{Green}{C}}}\right)$$
 \section{Studio della carica del condensatore}
-Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Vericfichiamolo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità***, possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire in fisica? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale:
+Per confermare questo risultato, effettuiamo una prova: se $t=0,\longrightarrow Q(t)=0$ come scritto nella premessa della dimostrazione. Vericfichiamolo sfruttando il limite della funzione. Il limite per $t$ che tende a 0 è semplice, poiché siamo in grado di garantire che la funzione sia continua nel suo dominio, cioé $[0;+\infty)$, e grazie alle proprietà della continuità, come abbiamo visto (sezione \ref{sec:continuità}), possiamo calcolare il limite: \begin{multline*}\lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-\frac{0}{RC}}\right)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C \left(1-e^{-0}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C (1-1)\longrightarrow \lim_{t\mapsto 0}Q(0)=\varepsilon C 0=0\end{multline*} Ottimo! Abbiamo vinto! \\ Avendo iniziato a studiare, calcoliamo ora il limite con $t$ che tende verso più infinito: \begin{multline*}\lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\frac{\infty}{RC}}\right)\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C \left(1-e^{-\infty}\right)\longrightarrow \\\longrightarrow \lim_{t\mapsto +\infty}Q(t)=\varepsilon C (1-0)\longrightarrow\lim_{t\mapsto +\infty} Q(t)=\varepsilon C\end{multline*} Cosa vuol dire in fisica? Vuol dire che, se lasciamo il circuito chiuso per un lungo periodo di tempo, la carica del condensatore si avvicinerà sempre di più al valore di $\varepsilon C$, tuttavia non potrà mai essere esattamente quel valore o superarlo. Possiamo concludere questo limite dicendo che la \textbf{carica massima di un condensatore} in un circuito RC è $\varepsilon C$. La forma bizzara dell'equazione ci suggerisce un ultimo esperimento: il valore della carica se $t=RC$: il prodotto $RC$ è a tutti gli effetti una misura di tempo, come dimostrato dall'analisi dimensionale:
 $$[R][C]=\frac{[V][t]}{[Q]}\cdot\frac{[Q]}{[V]}=\frac{[\xout{V}][t]}{[\xout{Q}]} \cdot \frac{[\xout{Q}]}{[\xout{V}]}=[t]$$ Questo elemento si chiama \textbf{costante di tempo} (o tempo caratteristico) del circuito RC e si indica con $\tau$. Se $t=\tau$, come si comporta la carica del condensatore? $Q(\tau)=0,632\,\varepsilon C$, o, per essere ancora più precisi, $Q(t)=\left(1-e^{-1}\right) \varepsilon C$. Grazie alla potenza dei calcolatori e dei programmi di \emph{plotting}, siamo capaci di visualizzare con facilità estrema i grafici di tutte le funzioni: ecco come nel grafico della figura \ref{fig:carica} possiamo confermare il dato matematico del limite, con l'asintoto orizzontale $y=\varepsilon C$. \\ Ritengo opportuno inoltre considerare alcune osservazioni, derivanti sia dalla forma algebrica, sia dal grafico: \begin{enumerate}
 \item L'andamento della funzione è caratterizzato dalla componente $(1-e^{-\frac{t}{RC}})$, poiché $\varepsilon C$ è solo un fattore moltiplicativo, per cui può modificare solo il limite della funzione(per $x\mapsto +\infty$), ma non modifica la struttura della funzione. È $(1-e^{-\frac{t}{RC}})$ il vero protagonista della funzione, che gli fornisce l'andamento del grafico in fig. \ref{fig:carica}.
 \item Al tempo $\tau$, la carica del condensatore è al $63,2\%$, mentre a $4\tau$ è al $98,1\%$: questo andamento ci suggerrisce che la \say{crescita} della carica non è costante. Per questo motivo introduciamo una nuova riflessione...
-\item La derivata della nostra funzione è: \begin{multline*}D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{RC-0}{RC^2})\longrightarrow D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{1}{RC})\longrightarrow\\\longrightarrow D[Q(t)]=\varepsilon \xout{C}\frac{1}{R\xout{C}} e^{-\frac{t}{RC}}\longrightarrow D[Q(t)]=\frac{\varepsilon}{R} e^{-\frac{t}{RC}}\end{multline*} Questo risultato è molto interessante, perché non rappresenta solo la derivata della funzione. Poiché per definizione (eq. 1.1) l'intensità di corrente è il differenziale della carica su tempo (e il la funzione che stiamo derivando è proprio carica in funzione del tempo), allora ...
+\item La derivata della nostra funzione è: \begin{multline*}D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{RC-0}{RC^2})\longrightarrow D[Q(t)]=\varepsilon C (0-e^{-\frac{t}{RC}}\cdot-\frac{1}{RC})\longrightarrow\\\longrightarrow D[Q(t)]=\varepsilon \xout{C}\frac{1}{R\xout{C}} e^{-\frac{t}{RC}}\longrightarrow D[Q(t)]=\frac{\varepsilon}{R} e^{-\frac{t}{RC}}\end{multline*} Questo risultato è molto interessante, perché non rappresenta solo la derivata della funzione. Poiché per definizione (eq. \ref{eq:intensità}) l'intensità di corrente è il differenziale della carica su tempo (e il la funzione che stiamo derivando è proprio carica in funzione del tempo), allora ...
 \item La derivata della carica del condensatore corrisponde (anzi, è) l'\textbf{intensità di corrente elettrica del condensatore}. $$I(t)=\frac{\varepsilon}{R} e^{-\frac{t}{RC}}$$ Se studiamo quindi questa funzione possiamo capire quanto velocemente si carica, e analogamente capire quanta corrente scorre (perché, di fatto, è la stessa cosa). Il grafico della figura \ref{fig:corrente} ci permette di studiare dal grafico elementi algebrici della funzione: lo studio del grafico è tanto efficace quanto lo studio algebrico. Possiamo dedurre dal grafico anche i suoi limiti: per $x\mapsto 0$ il limite è $\frac{\varepsilon}{R}$, mentre per $x\mapsto +\infty$ la funzione si limita a 0. La carica di un condensatore quindi si carica molto velocemente all'inizio, ma con il passare del tempo, l'intensità di corrente sarà quasi pari a 0. Per concretizzare il concetto, al famoso tempo $4\tau$, la carica $Q(t)$ è al $98,1\%$ della carica massima $\varepsilon C$, e la sua intensità di corrente $I(t)$ è all'$1,8\%$ dell'intensità massima $\frac{\varepsilon}{R}$.
 \end{enumerate}
 \begin{figure}[htp]
